--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,3 +99,11 @@ html, body {
 .leaflet-interactive {
   outline: none !important;
 }
+
+:root {
+  --vh: 1vh;
+}
+
+.preserve-whitespace {
+  white-space: pre-line;
+}
